Fix spacing with filter by boundary custom filter-button

--- a/scss/components/_filter-by-boundary.scss
+++ b/scss/components/_filter-by-boundary.scss
@@ -2,4 +2,10 @@
   button {
     @extend .filter-options-button;
   }
+
+  button.cancel-drawing,
+  button.draw-again {
+    @extend .filter-options-button;
+    margin-left: $margin-10;
+  }
 }
